--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,3 @@
-
+spring.datasource.url= jdbc:postgresql://localhost:5432/Noroff_AssignmentTwo_Db
+spring.datasource.username= postgres
+spring.datasource.password= 1234
